fixed line_heigtt , btn margin , letter-spacing

--- a/src/css/disclaimer.css
+++ b/src/css/disclaimer.css
@@ -4,13 +4,14 @@
 }
 .aproveBtn.disc{  
    margin-right: 32px;
+   margin-bottom: 15px;
    
 }
 .discheader{
     text-align: center;
     font-size: 32px;
     margin:56px 0px;
-    letter-spacing: 4px;
+    letter-spacing: 8px;
 
 }
 .common-text{
@@ -18,4 +19,5 @@
     font-size: 24px;
     margin:0px  108px;
     letter-spacing: 3px;
+    line-height: 50px;
 }
